# DragDropHtmlEditor

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run.ps1  build_installer.ps1  copy_dependencies_cmake.cmake  deploy_deps.ps1  run_windeployqt.ps1
fonts/: Square_12.s  Square_20.s  Square_8.s  symbols.s
html_files/: About 480x320.html
installer/: TftHtmlEditor.iss
resources/: app_icons.qrc
resources/windows/: app.aps  app.rc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/canvas/: canvasbridge.cpp  canvasbridge.h  canvaswidget.cpp  canvaswidget.h
src/fonteditor/: fonteditorwindow.cpp  fonteditorwindow.h  fonteditorwindow.ui  glypheditorwidget.cpp  glypheditorwidget.h
src/model/: htmlgenerator.cpp  htmlgenerator.h  htmlparser.cpp  htmlparser.h  tftfont.cpp  tftfont.h  tftfontmanager.cpp  tftfontmanager.h  tftfontmetrics.cpp  tftfontmetrics.h
src/panels/: codeview.cpp  codeview.h  palettewidget.cpp  palettewidget.h  propertypanel.cpp  propertypanel.h  propertypanel.ui
